add_executable(wren_test
    "api/api_tests.c"
    "api/api_tests.h"
    "api/benchmark.c"
    "api/benchmark.h"
    "api/call_calls_foreign.c"
    "api/call_calls_foreign.h"
    "api/call_wren_call_root.c"
    "api/call_wren_call_root.h"
    "api/call.c"
    "api/call.h"
    "api/error.c"
    "api/error.h"
    "api/foreign_class.c"
    "api/foreign_class.h"
    "api/get_variable.c"
    "api/get_variable.h"
    "api/handle.c"
    "api/handle.h"
    "api/lists.c"
    "api/lists.h"
    "api/maps.c"
    "api/maps.h"
    "api/new_vm.c"
    "api/new_vm.h"
    "api/reset_stack_after_call_abort.c"
    "api/reset_stack_after_call_abort.h"
    "api/reset_stack_after_foreign_construct.c"
    "api/reset_stack_after_foreign_construct.h"
    "api/resolution.c"
    "api/resolution.h"
    "api/slots.c"
    "api/slots.h"
    "api/user_data.c"
    "api/user_data.h"
    "main.c"
    "test.c"
    "test.h"
)

target_link_libraries(wren_test PRIVATE wren::wren)
